# NEXUS_BUILDER

./: .gitignore  .replit  __main__.py  config.env  nexus.py  nexus_orchestrator.py  nexus_settings.json  pyproject.toml  replit.md  requirements.txt  test_config.py  test_enterprise_pipeline.p  test_enterprise_pipeline.py  test_manager_loop.py  test_master_advisor.py  test_memory.py  test_nexus_pipeline.py  test_plugins.py  test_registry.py  test_reviewer_gate.py  test_swarm_control.py
.agents/memory/: MEMORY.md  deployment-ai-requirements.md  pipeline-architecture.md  vision-document-bugs.md
core/: ai_client.py  ai_provider.py  ai_registry.py  config.py  kernel.py  logger.py  nexus_ai.py  orchestrator.py  plugin_manager.py  provider_manager.py  settings.py  shared_memory.py
core/providers/: __init__.py  builtin.py  lmstudio.py  ollama.py  openrouter.py
memory/: database.json
memory/backups/: memory_20260719_160043.bak  memory_20260719_160104.bak  memory_20260720_153347.bak  memory_20260720_153424.bak  memory_20260720_153431.bak  memory_20260720_154346.bak  memory_20260720_154413.bak  memory_20260720_154419.bak
plugins/architect_ai/: agent.py
plugins/capability_assessor/: __init__.py  agent.py
plugins/coder_ai/: agent.py
plugins/database_ai/: agent.py
plugins/deployment_ai/: agent.py
plugins/design_ai/: agent.py
plugins/devops_ai/: agent.py
plugins/documentation_ai/: agent.py
plugins/integration_ai/: agent.py
plugins/manager_ai/: agent.py
plugins/memory_ai/: agent.py
plugins/module_detector/: __init__.py  (+1 more)
research/: knowledge_base.json
(+19 files in other folders)
